[package]
name = "metronome"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["cargo"] }
fallible-streaming-iterator = "0.1.9"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
strum = "0.26.2"
strum_macros = "0.26.2"
