[package]
name = "metronome-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "metronomecli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
metronome-core = { version = "*", path = "../metronome-core" }